Replace List.of with Arrays.asList or Collections.emptyList